tests/ui/type-alias-impl-trait/type-alias-impl-trait-with-cycle-error2.stderr
error: item does not constrain `Foo::{opaque#0}`, but has it in its signature
  --> $DIR/type-alias-impl-trait-with-cycle-error2.rs:10:4
   |
LL | fn crash(x: Foo) -> Foo {
   |    ^^^^^
   |
   = note: consider moving the opaque type's declaration and defining uses into a separate module
note: this opaque type is in the signature
  --> $DIR/type-alias-impl-trait-with-cycle-error2.rs:7:12
   |
LL | type Foo = impl Bar<Foo, Item = Foo>;
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^

error: unconstrained opaque type
  --> $DIR/type-alias-impl-trait-with-cycle-error2.rs:7:12
   |
LL | type Foo = impl Bar<Foo, Item = Foo>;
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `Foo` must be used in combination with a concrete type within the same module

error: aborting due to 2 previous errors

